# procedural-planet

./: CMakeLists.txt  README.md
data/shaders/: default.frag  planet.frag  planet.vert  sphere.frag  sphere.vert
src/: main.cpp  planet.cpp  sphere.cpp
src/headers/: camera.h  editor.h  light.h  planet.h  shader.h  sphere.h
submission/release/: imgui.ini
submission/release/data/shaders/: default.vert  framebuffer.frag  framebuffer.vert  planet.frag
